# 3D-RAMS

./: .env.agentverse.example  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
agentcore/: .env.local.example  agentcore.json
agentcore-prototype/: README.md
agentcore-prototype/app/fieldbrief_agent/: main.py  pyproject.toml
agentverse/: README.md  agentcore_client.py  frontend_proxy.py  frontend_proxy_lambda.py  hosted_adapter.py
backend/: requirements.txt
deploy/: README.md  build-lambda.ps1  deploy-amplify.ps1  deploy-aws.ps1  lambda-requirements.txt  smoke-hosted.ps1  smoke-hosted.py
docs/: agentcore-rebuild.md  agentverse-agentcore-adapter-contract.md  agentverse-asi-one-runtime.md  amplify-hosting.md  api-contract.md  architecture.md  aws-bedrock-setup.md  demo-proof.md  demo-recording-runbook.md  deploy-your-own.md  dev-chunteng-branch-handoff.md  dev-chunteng-branch-handoff.zh.md  durable-runtime-v2.md  evaluation.md  hosted-aws-product.md  mvp-readiness.md  problem-statement.md  structured-report-template.json  team-test-guide.md
fixtures/: geospatial_features.json  planning_report.txt  sample_site.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: bedrock-smoke.py  check-demo.ps1  check-demo.sh  deploy-agentcore-frontend-proxy.sh  deploy-amplify-source.sh  evaluate-demo.py  hosted-agentcore-asio-smoke.py  live-map-smoke.py  register_agentverse.py  smoke-runtime.py  start-dev.sh
(+137 files in other folders)
